# CameraDriver

./: .gitignore  CMakeLists.txt  CameraSettings.ini  README.txt
Camera/: CameraBase.cpp  CameraBase.h  CameraSettings.xml  HKCamera.cpp  HKCamera.h  HardwareTriggerConfiguration.h  camera.cpp  camera.h
Configuration/: CameraSettings.xml  InspectionSystem.xml
src/: main.cpp
utils/: DataManage.cpp  DataManage.h  easylogging++.cc
utils/common/: CommonFunc.h  DataType.h  MyThreadManage.h
